# LoRA-Craft

./: .gitignore  .replit  LICENSE  README.md  electron-builder.json  package-lock.json  package.json  replit.md  tailwind.config.ts
attached_assets/: Pasted-Alright-here-s-an-upgraded-prompt-that-rolls-your-new-f_1764731406052.txt  Pasted-Alright-let-s-feed-Replit-a-monster-prompt-the-kind-tha_1765112854611.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: CelebritySearchModal.tsx  DatasetToolbar.tsx  DetailPanel.tsx  ImageCard.tsx  ImageGrid.tsx  Sidebar.tsx  TitleBar.tsx  UploadDropzone.tsx  WebSearchModal.tsx
client/src/components/ui/: confirm-modal.tsx  dialog.tsx  modal.tsx
client/src/hooks/: useDatasets.ts  useImages.ts  useWorkspaces.ts
client/src/lib/: api.ts
client/src/pages/: Desktop.tsx  Settings.tsx  Training.tsx
data/: lora-craft.db  lora-craft.db-shm  lora-craft.db-wal
electron/: main.ts  preload.ts
server/: appPaths.ts  captioning.ts  crawlCache.ts  databaseAdapter.ts  db.ts  imageProcessing.ts  localDatabase.ts  localFileStorage.ts  objectStorage.ts  replicateIntegration.ts  routes.ts  searchEngines.ts  settingsRoutes.ts  storage.ts  storageAdapter.ts  types.d.ts
server/celebritySearch/: deduplicator.ts  galleryCrawler.ts  imageDownloader.ts  index.ts  siteDetector.ts
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
