[package]
name = "lora-craft"
version = "1.0.0"
description = "LoRA Craft - Dataset Builder for LoRA Training"
authors = ["LoRA Craft"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "lora_craft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
